deploy/vote/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: vote
  namespace: instavote
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"  
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - ci.mecsys.com.br
    secretName: instavote-tls
  rules:
  - host: ci.mecsys.com.br
    http:
      paths:
      - backend:
          service:
            name: vote
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
